# django-scheduler-field

./: .gitignore  LICENSE   README.md  README.rst   manifest.in  setup.cfg
scheduler_field/: commands.py  fields.py
